--- a/clash-rules.yaml
+++ b/clash-rules.yaml
@@ -55,13 +55,6 @@ rule-providers:
     path: ./ruleset/gfw.yaml
     interval: 86400
 
-  greatfire:
-    type: http
-    behavior: domain
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/greatfire.txt"
-    path: ./ruleset/greatfire.yaml
-    interval: 86400
-
   tld-not-cn:
     type: http
     behavior: domain
@@ -123,6 +116,64 @@ blacklist-rules:
   - RULE-SET,reject,REJECT
   - RULE-SET,tld-not-cn,PROXY
   - RULE-SET,gfw,PROXY
-  - RULE-SET,greatfire,PROXY
   - RULE-SET,telegramcidr,PROXY
   - MATCH,Final-Black
+
+extra-rule-providers:
+  bilibili:
+    type: http
+    behavior: classical
+    url: "https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBili/BiliBili.yaml"
+    path: ./ruleset/extra-bilibili.yaml
+    interval: 86400
+
+  netflix:
+    type: http
+    behavior: classical
+    url: "https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Netflix/Netflix_Classical.yaml"
+    path: ./ruleset/extra-netflix.yaml
+    interval: 86400
+
+  youtube:
+    type: http
+    behavior: classical
+    url: "https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube.yaml"
+    path: ./ruleset/extra-youtube.yaml
+    interval: 86400
+
+  appletv:
+    type: http
+    behavior: classical
+    url: "https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/AppleTV/AppleTV.yaml"
+    path: ./ruleset/extra-appletv.yaml
+    interval: 86400
+
+  steam:
+    type: http
+    behavior: classical
+    url: "https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Steam/Steam.yaml"
+    path: ./ruleset/extra-steam.yaml
+    interval: 86400
+
+  nintendo:
+    type: http
+    behavior: classical
+    url: "https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Nintendo/Nintendo.yaml"
+    path: ./ruleset/extra-nintendo.yaml
+    interval: 86400
+
+  openai:
+    type: http
+    behavior: classical
+    url: "https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI.yaml"
+    path: ./ruleset/extra-openai.yaml
+    interval: 86400
+
+extra-rules:
+  - RULE-SET,bilibili,🐹 BiliBili
+  - RULE-SET,netflix,🍿 Netflix
+  - RULE-SET,youtube,📷 YouTube
+  - RULE-SET,appletv,🍎 AppleTV
+  - RULE-SET,steam,🎮 Steam
+  - RULE-SET,nintendo,👾 Nintendo
+  - RULE-SET,openai,🤖 OpenAI
